<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/argi"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ffffff"
            android:paddingBottom="8dp">

            <EditText
                android:id="@+id/full_name"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:background="#16000000"
                android:fontFamily="sans-serif"
                android:hint="@string/full_names"
                android:inputType="textCapWords"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/gender_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/radio_button_group"
                android:fontFamily="sans-serif"
                android:paddingTop="6dp"
                android:text="@string/gender"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio_button_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:orientation="horizontal"
                android:textSize="20sp">

                <RadioButton
                    android:id="@+id/male_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/male_sex"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/female_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/female_sex"
                    android:textSize="20sp" />

            </RadioGroup>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ffffff"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_1"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/first_question"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/q1_checkbox_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/answer_1_a" />

            <CheckBox
                android:id="@+id/q1_checkbox_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/answer_1_b" />

            <CheckBox
                android:id="@+id/q1_checkbox_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/answer_1_c" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_2"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/second_question"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/q2_checkbox_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/answer_2_a" />

            <CheckBox
                android:id="@+id/q2_checkbox_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/answer_2_b" />

            <CheckBox
                android:id="@+id/q2_checkbox_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/answer_2_c" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/question_3"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/third_question"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <RadioButton
                    android:id="@+id/q3_radiobutton_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/answer_3_a" />

                <RadioButton
                    android:id="@+id/q3_radiobutton_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/answer_3_b" />

                <RadioButton
                    android:id="@+id/q3_radiobutton_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/answer_3_c" />

            </RadioGroup>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/question_4"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/fourth_question"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <RadioButton
                    android:id="@+id/q4_radiobutton_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/answer_4_a" />

                <RadioButton
                    android:id="@+id/q4_radiobutton_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4_b" />

                <RadioButton
                    android:id="@+id/q4_radiobutton_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/answer_4_c" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ffffff">

            <Button
                android:id="@+id/submitAnswers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/submit"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/name_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ffffff"
            android:fontFamily="sans-serif"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingLeft="16dp"
            android:paddingBottom="8dp"/>

        <TextView
            android:id="@+id/gender_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ffffff"
            android:fontFamily="sans-serif"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingLeft="16dp"
            android:paddingBottom="8dp"/>

        <TextView
            android:id="@+id/answers_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ffffff"
            android:fontFamily="sans-serif"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingLeft="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ffffff">

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:onClick="clearText"
                android:text="@string/clear"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>